for IPCS search on all 3 for a result